Work on next part

--- a/analysis2.ipynb
+++ b/analysis2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "57062785-b21d-45f6-993e-aa09d884fafa",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ff61d3e6-185b-43f3-ad0a-8eaea646fe41",
    "metadata": {},
    "outputs": [],
@@ -37,137 +37,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7fd90573-b85a-41f4-a2ba-8c443361e026",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.000355214"
+       "array([[ 2.89374e-03,  2.89374e-03,  2.89374e-03, ...,  2.89374e-03,\n",
+       "         2.89374e-03,  2.89374e-03],\n",
+       "       [ 2.16493e-03,  2.29075e-03,  2.41657e-03, ...,  1.98833e-03,\n",
+       "         2.07663e-03,  2.16493e-03],\n",
+       "       [ 1.70762e-03,  1.89510e-03,  2.08258e-03, ...,  1.31565e-03,\n",
+       "         1.51164e-03,  1.70762e-03],\n",
+       "       ...,\n",
+       "       [ 2.29082e-04,  4.64287e-04,  6.74721e-04, ..., -2.87665e-04,\n",
+       "        -2.52209e-05,  2.29082e-04],\n",
+       "       [ 1.11774e-04,  2.44599e-04,  3.63276e-04, ..., -1.78092e-04,\n",
+       "        -3.12251e-05,  1.11774e-04],\n",
+       "       [-1.18974e-04, -8.53610e-05, -5.12434e-05, ..., -1.68488e-04,\n",
+       "        -1.46613e-04, -1.18974e-04]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "phi2[4][3]"
+    "phi2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "12518b9f-5a4f-4b40-896a-d563b583408b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mphi\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "max(phi)"
+    "for r in list(range(101)):\n",
+    "    for z in list(range(227)):\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "6c146d3d-fca2-4c3c-b6c3-4238e868c42e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43mall\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mphi\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
-    }
-   ],
-   "source": [
-    "all(phi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "9548dc00-1e05-4d35-bd2e-9e7f2d281a4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'numpy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnumpy\u001b[49m\u001b[38;5;241m.\u001b[39mmax(phi2)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'numpy' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "numpy.max(phi2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "c83cc486-1904-4b22-a07e-928c09e21e17",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.126814"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.max(phi2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "e3327230-9d4c-40e2-a02a-1cfa22df058c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.111547"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.min(phi2)"
+    "# np.max(phi2)\n",
+    "# np.min(phi2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db0886ce-a448-48c3-9309-dc5a8741af1e",
+   "id": "6ac33fff-a3d9-4cf2-b30e-227ed0466ca8",
    "metadata": {},
    "outputs": [],
    "source": []
