Begin second part of second analysis

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -134,7 +134,9 @@
    "id": "c1c249d9-a9f0-461e-af62-647bdf5fa834",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Where you left off: trying to figure out how to convert the polar image to cartesian using OpenCV (see chatGPT chat)"
+   ]
   },
   {
    "cell_type": "code",
