Complete second part of task

--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
    "outputs": [],
@@ -10,29 +10,20 @@
     "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
     "from scipy.interpolate import griddata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b8f3ec9a-b3a5-469a-bec0-bcd6e335ebbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi = np.load(\"Phi_201snap.npy\")\n",
-    "phi160 = phi[:,:,100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = phi160\n",
+    "# Load in array of 201 images, create dataframe\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame(index=np.arange(201), columns=np.arange(1))\n",
+    "df.rename(columns={0: 'norm'}, inplace=True)\n",
     "\n",
     "r = np.linspace(1, 101, 101)\n",
     "theta = np.linspace(0, 2 * np.pi, 227)\n",
@@ -46,28 +37,186 @@
     "grid_x, grid_y = np.linspace(-101, 101, 203), np.linspace(-101, 101, 203)\n",
     "grid_x, grid_y = np.meshgrid(grid_x, grid_y)\n",
     "\n",
-    "# Interpolate the data to the Cartesian grid\n",
     "points = np.array([x.flatten(), y.flatten()]).T\n",
-    "values = data.flatten()\n",
-    "grid_z = griddata(points, values, (grid_x, grid_y), method='nearest')\n",
     "\n",
-    "# Plot the image\n",
-    "plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
-    "plt.axis(\"off\")\n",
-    "plt.savefig('image.jpg', bbox_inches='tight')\n",
-    "plt.close()"
+    "for i in range(201):\n",
+    "    data = phi[:,:,i]\n",
+    "    values = data.flatten()\n",
+    "    \n",
+    "    # Interpolate the data to the Cartesian grid\n",
+    "    grid_z = griddata(points, values, (grid_x, grid_y), method='nearest')\n",
+    "    \n",
+    "    # Optional: Plot and save image\n",
+    "    # plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
+    "    # plt.axis(\"off\")\n",
+    "    # plt.savefig('image.jpg', bbox_inches='tight')\n",
+    "    # plt.close()\n",
+    "\n",
+    "    output_array = np.zeros((101, 227))\n",
+    "    for rad in range(101):\n",
+    "        for ang in range(227):\n",
+    "            # Polar coordinates\n",
+    "            radius = r[rad]\n",
+    "            angle = theta[ang]\n",
+    "            \n",
+    "            # Convert to Cartesian coordinates\n",
+    "            x_cart = radius * np.cos(angle)\n",
+    "            y_cart = radius * np.sin(angle)\n",
+    "            \n",
+    "            # Find the nearest pixel in the Cartesian grid\n",
+    "            x_nearest = np.argmin(np.abs(grid_x[0] - x_cart))\n",
+    "            y_nearest = np.argmin(np.abs(grid_y[:, 0] - y_cart))\n",
+    "            \n",
+    "            # Get the grayscale value from the Cartesian image\n",
+    "            output_array[rad, ang] = grid_z[y_nearest, x_nearest]\n",
+    "            \n",
+    "    # Compute norm, add to dataframe\n",
+    "    norm_sq = 0\n",
+    "    diff_array = output_array - data\n",
+    "    norm = np.linalg.norm(diff_array)\n",
+    "\n",
+    "    # for row in range(101):\n",
+    "    #     for col in range(227):\n",
+    "    #         norm_sq += (diff_array[row][col])**2\n",
+    "    # norm = norm_sq**0.5\n",
+    "    \n",
+    "    df.at[i, 'norm'] = norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "13d4e9a3-ce00-4671-81e1-ce7306cbf67f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>norm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>0.48222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>0.520447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>0.572255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>0.641622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>0.729368</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         norm\n",
+       "0         0.0\n",
+       "1         0.0\n",
+       "2         0.0\n",
+       "3         0.0\n",
+       "4         0.0\n",
+       "..        ...\n",
+       "196   0.48222\n",
+       "197  0.520447\n",
+       "198  0.572255\n",
+       "199  0.641622\n",
+       "200  0.729368\n",
+       "\n",
+       "[201 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "b7965d2a-54c0-4604-b801-abb38908aa23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13529510175642534"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.at[160, 'norm']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97e56438-d286-4fca-883c-bbad871002b6",
+   "id": "6eb96622-8bbc-499a-8780-508234906615",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Now convert image back to r,z array and calculate the norm\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
