Work on converting the input array into 101 by 227 image in cartesian coords

--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -49,7 +49,7 @@
     "    # Optional: Plot and save image\n",
     "    # plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
     "    # plt.axis(\"off\")\n",
-    "    # plt.savefig('image.jpg', bbox_inches='tight')\n",
+    "    # plt.savefig('image.jpg', bbox_inches='tight', pad_inches=0)\n",
     "    # plt.close()\n",
     "\n",
     "    output_array = np.zeros((101, 227))\n",
@@ -67,7 +67,7 @@
     "            x_nearest = np.argmin(np.abs(grid_x[0] - x_cart))\n",
     "            y_nearest = np.argmin(np.abs(grid_y[:, 0] - y_cart))\n",
     "            \n",
-    "            # Get the grayscale value from the Cartesian image\n",
+    "            # Get the raw values from grid_z and put into output array\n",
     "            output_array[rad, ang] = grid_z[y_nearest, x_nearest]\n",
     "            \n",
     "    # Compute norm, add to dataframe\n",
