--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -13,28 +13,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "8ae75a7b-4315-45f2-82c4-8fcd379d8fa6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'numpy' has no attribute 'float8'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m arr16 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfloat64(np\u001b[38;5;241m.\u001b[39mfloat16(arr))\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Convert to 8b then 64b\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m arr8 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mfloat64(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat8\u001b[49m(arr))\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Compute norms and add to dataframe\u001b[39;00m\n\u001b[1;32m     19\u001b[0m norm32 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(arr \u001b[38;5;241m-\u001b[39m arr32)\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/numpy/__init__.py:333\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    330\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRemoved in NumPy 1.25.0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    331\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTester was removed in NumPy 1.25.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 333\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    334\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;18m__name__\u001b[39m, attr))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'float8'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>norm32</th>\n",
+       "      <th>norm16</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.004012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.004319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.005209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.005853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>0.007262</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       norm32    norm16\n",
+       "0         0.0  0.000001\n",
+       "1         0.0       0.0\n",
+       "2         0.0       0.0\n",
+       "3         0.0       0.0\n",
+       "4         0.0       0.0\n",
+       "..        ...       ...\n",
+       "196       0.0  0.004012\n",
+       "197  0.000001  0.004319\n",
+       "198  0.000001  0.005209\n",
+       "199  0.000001  0.005853\n",
+       "200  0.000001  0.007262\n",
+       "\n",
+       "[201 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(index=np.arange(201), columns=np.arange(3))\n",
-    "df.rename(columns={0: 'norm32', 1: 'norm16', 2: 'norm8'}, inplace=True)\n",
+    "df = pd.DataFrame(index=np.arange(201), columns=np.arange(2))\n",
+    "df.rename(columns={0: 'norm32', 1: 'norm16'}, inplace=True)\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -45,16 +140,11 @@
     "    # Convert to 16b then 64b\n",
     "    arr16 = np.float64(np.float16(arr))\n",
     "\n",
-    "    # Convert to 8b then 64b\n",
-    "    arr8 = np.float64(np.float8(arr))\n",
-    "\n",
     "    # Compute norms and add to dataframe\n",
     "    norm32 = np.linalg.norm(arr - arr32)\n",
     "    norm16 = np.linalg.norm(arr - arr16)\n",
-    "    norm8 = np.linalg.norm(arr - arr8)\n",
     "    df.at[i, 'norm32'] = norm32\n",
     "    df.at[i, 'norm16'] = norm16\n",
-    "    df.at[i, 'norm8'] = norm8\n",
     "\n",
     "df"
    ]
