--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -219,8 +219,9 @@
     "    plt.pcolor(xx, zz, phi[:,:,i], shading='auto', cmap='seismic')\n",
     "\n",
     "    # Save image into different formats, including JPG's of varying quality\n",
-    "    plt.savefig('im.png')\n",
-    "    plt.savefig('im_95.jpg')\n",
+    "\n",
+    "    plt.savefig('im.png', bbox_inches='tight')\n",
+    "    plt.savefig('im_95.jpg', bbox_inches='tight')\n",
     "    im = Image.open('im_95.jpg')\n",
     "    im.save('im_75.jpg', quality=75)\n",
     "    im.save('im_50.jpg', quality=50)\n",
