Finish analysis2.2 implementation, but still need to bug the same NaN error that also showed up in analysis2.1

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -157,23 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "ccbee0ed-2a8f-4ca5-8544-bf77e297ed35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "200"
+       "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['norm'].isnull().sum() # counting total number of NaN's in df"
+    "df['norm'].isnull().sum() # counting total number of NaN's in df\n",
+    "np.isnan(np.sum(phi)) # returns true if there's at least one NaN in phi, false otherwise"
    ]
   },
   {
