--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -13,13 +13,12 @@
     "from scipy.interpolate import griddata\n",
     "from PIL import Image\n",
     "\n",
-    "# Enter your DPI here: \n",
     "my_dpi = 192"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [
@@ -50,71 +49,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6.359312</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6.359312</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6.359312</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6.359312</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6.359312</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>17.609869</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>19.367661</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>23.459055</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>25.849915</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
-       "      <td>33.770335</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>2.3852</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>201 rows × 1 columns</p>\n",
+       "<p>202 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          norm\n",
-       "0     6.359312\n",
-       "1     6.359312\n",
-       "2     6.359312\n",
-       "3     6.359312\n",
-       "4     6.359312\n",
-       "..         ...\n",
-       "196  17.609869\n",
-       "197  19.367661\n",
-       "198  23.459055\n",
-       "199  25.849915\n",
-       "200  33.770335\n",
+       "       norm\n",
+       "0       NaN\n",
+       "1       NaN\n",
+       "2       NaN\n",
+       "3       NaN\n",
+       "4       NaN\n",
+       "..      ...\n",
+       "197     NaN\n",
+       "198     NaN\n",
+       "199     NaN\n",
+       "200     NaN\n",
+       "202  2.3852\n",
        "\n",
-       "[201 rows x 1 columns]"
+       "[202 rows x 1 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +121,7 @@
    "source": [
     "# Load in array of 201 images, create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(index=np.arange(201), columns=np.arange(1))\n",
-    "df.rename(columns={0: 'norm'}, inplace=True)\n",
+    "df = pd.DataFrame(columns=['norm'], index=np.arange(201))\n",
     "\n",
     "r = np.linspace(1, 101, 101)\n",
     "theta = np.linspace(0, 2 * np.pi, 227)\n",
@@ -147,11 +145,12 @@
     "    grid_z = griddata(points, values, (grid_x, grid_y), method='nearest')\n",
     "    \n",
     "    # Plot and save image --> Open JPG, convert to np array just like before, then use that instead of grid_z below.\n",
+    "    plt.figure(figsize=(264/my_dpi, 264/my_dpi), dpi=my_dpi)\n",
     "    plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
     "    plt.axis(\"off\")\n",
     "    plt.savefig('analysis2.2.jpg', bbox_inches='tight', pad_inches=0)\n",
     "    plt.close()\n",
-    "    im = Image.open('analysis2.1.jpg')\n",
+    "    im = Image.open('analysis2.2.jpg')\n",
     "    im_array = np.asarray(im)\n",
     "\n",
     "    # Create convert function to use to convert im_array back to raw values\n",
@@ -161,7 +160,7 @@
     "        return ratio*x + phimin\n",
     "\n",
     "    # Loop through im_array and replace RGB by raw in copy\n",
-    "    copy = im_array.copy()\n",
+    "    copy = grid_z.copy()\n",
     "    for i, row in enumerate(im_array):\n",
     "        for j, col in enumerate(row):\n",
     "            copy[i][j] = convertRGBToRaw(col[0])\n",
@@ -185,8 +184,7 @@
     "            output_array[rad, ang] = copy[y_nearest, x_nearest]\n",
     "            \n",
     "    # Compute norm, add to dataframe\n",
-    "    norm_sq = 0\n",
-    "    diff_array = output_array - data\n",
+    "    diff_array = output_array - arr\n",
     "    norm = np.linalg.norm(diff_array)\n",
     "    df.at[i, 'norm'] = norm\n",
     "df"
@@ -194,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "13d4e9a3-ce00-4671-81e1-ce7306cbf67f",
    "metadata": {},
    "outputs": [
@@ -204,7 +202,7 @@
        "0.3563949661550071"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -290,41 +288,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4a839498-5347-47dd-8e99-7b7bcca53a5f",
+   "execution_count": 17,
+   "id": "00c1df82-7ff9-4fa6-926e-99389ca740b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.89374e-03,  2.89374e-03,  2.89374e-03, ...,  2.89374e-03,\n",
-       "         2.89374e-03,  2.89374e-03],\n",
-       "       [ 2.16493e-03,  2.29075e-03,  2.41657e-03, ...,  1.98833e-03,\n",
-       "         2.07663e-03,  2.16493e-03],\n",
-       "       [ 1.70762e-03,  1.89510e-03,  2.08258e-03, ...,  1.31565e-03,\n",
-       "         1.51164e-03,  1.70762e-03],\n",
-       "       ...,\n",
-       "       [ 2.29082e-04,  4.64287e-04,  6.74721e-04, ..., -2.87665e-04,\n",
-       "        -2.52209e-05,  2.29082e-04],\n",
-       "       [ 1.11774e-04,  2.44599e-04,  3.63276e-04, ..., -1.78092e-04,\n",
-       "        -3.12251e-05,  1.11774e-04],\n",
-       "       [-1.18974e-04, -8.53610e-05, -5.12434e-05, ..., -1.68488e-04,\n",
-       "        -1.46613e-04, -1.18974e-04]])"
+       "(101, 227, 3)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr"
+    "im_array.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "43bc6860-0daa-4384-9010-f2821dd152cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(203, 203)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "copy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5af7ecb4-a49c-406d-8e85-cf01093a411c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(203, 203)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_z.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb86650-a1ec-4e6d-a3a9-b0cb7e338c18",
+   "id": "ba1e993f-c026-4a15-91a6-e370ee5da078",
    "metadata": {},
    "outputs": [],
    "source": []
