--- a/analysis2.3.ipynb
+++ b/analysis2.3.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "8ae75a7b-4315-45f2-82c4-8fcd379d8fa6",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "[201 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,8 +128,7 @@
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(index=np.arange(201), columns=np.arange(2))\n",
-    "df.rename(columns={0: 'norm32', 1: 'norm16'}, inplace=True)\n",
+    "df = pd.DataFrame(columns=['norm32', 'norm16'], index=np.arange(201))\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -170,16 +169,8 @@
     "example = phi[:,:,160]\n",
     "y = np.float64(example)\n",
     "z = np.float32(example)\n",
-    "np.array_equal(example, y), np.array_equal(example, z)\n"
+    "np.array_equal(example, y), np.array_equal(example, z)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e17bc49a-7e0e-48a0-8b04-698b1657caae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
